@@ -1220,7 +1220,7 @@ private:
     QString key_type_to_string (key_types key_type);
     std::size_t default_size_for_key_type (key_types key_type);
     QString generateKey (key_types key_type, bool host_key = false);
-    QString createRSAKeyBundle();
+    QString createRSAKey ();
 
 ////////////////plugin stuff////////////////////
 #ifdef CFGPLUGIN
